src/objects/Developer__c.object
<CustomObject>
    <description>MG_Developer</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Developers</relationshipLabel>
        <relationshipName>Developers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Last_Feed_Received__c</fullName>
        <inlineHelpText>Date a feed was last delivered for the master plan or community</inlineHelpText>
        <label>Date Last Feed Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Developer_Contact_Notes__c</fullName>
        <inlineHelpText>Notes about communication with the developer.</inlineHelpText>
        <label>Developer Contact Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Developer_Logo_URL__c</fullName>
        <label>Developer Logo URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Developer_Website__c</fullName>
        <label>Developer Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Contact_Date__c</fullName>
        <inlineHelpText>Date last time we reached out via email or phone number to get a feed. This is not the date a feed was received.</inlineHelpText>
        <label>Last Contact Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meyers_Id__c</fullName>
        <description>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</description>
        <externalId>true</externalId>
        <inlineHelpText>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</inlineHelpText>
        <label>Meyers Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Point_of_Contact_Email__c</fullName>
        <description>Email address for main point of contact that provides a data feed</description>
        <inlineHelpText>Email address for main point of contact that provides a data feed</inlineHelpText>
        <label>Point of Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Point_of_Contact_Phone__c</fullName>
        <description>Phone number for main point of contact that provides a data feed</description>
        <inlineHelpText>Phone number for main point of contact that provides a data feed</inlineHelpText>
        <label>Point of Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Point_of_Contact__c</fullName>
        <description>Main point of contact that provides a data feed</description>
        <inlineHelpText>Main point of contact that provides a data feed</inlineHelpText>
        <label>Point of Contact</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>FM</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>GU</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MH</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street_address__c</fullName>
        <label>Street address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telephone_Number__c</fullName>
        <label>Telephone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Developer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Developer_Logo_URL__c</columns>
        <columns>State__c</columns>
        <columns>Developer_Website__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Developer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Developers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>